--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required (VERSION 3.15)
+project (lifeboat)
 
-project(lifeboat)
-
-set(CMAKE_CXX_STANDARD 17)
+add_subdirectory(lifeboat)
