--- a/src/multiplayer/CMakeLists.txt
+++ b/src/multiplayer/CMakeLists.txt
@@ -4,3 +4,5 @@ project (lifeboat)
 add_subdirectory(helloworld)
 add_subdirectory(bd_factorization)
 add_subdirectory(lifeboat)
+
+add_library(multiplayer lifeboat/player.cc lifeboat/player.h lifeboat/server.cpp)
