try to connect parts

--- a/src/multiplayer/CMakeLists.txt
+++ b/src/multiplayer/CMakeLists.txt
@@ -1,8 +1,17 @@
-cmake_minimum_required (VERSION 3.15)
-project (lifeboat)
+cmake_minimum_required(VERSION 3.15)
+project(lifeboat)
 
 add_subdirectory(helloworld)
 add_subdirectory(bd_factorization)
 add_subdirectory(lifeboat)
 
-add_library(multiplayer lifeboat/player.cc lifeboat/player.h lifeboat/server.cpp)
+add_library(
+        multiplayer
+        lifeboat/player.cpp
+        lifeboat/player.h
+        lifeboat/server.cpp
+        lifeboat/action_factory.cpp
+        lifeboat/action_factory.h
+        lifeboat/server.cpp
+        lifeboat/server.h
+        )
