--- a/src/multiplayer/lifeboat/CMakeLists.txt
+++ b/src/multiplayer/lifeboat/CMakeLists.txt
@@ -37,5 +37,33 @@ set(GENERATED_PROTOBUF_FILES ${PB_H_FILE} ${PB_CPP_FILE}
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 link_libraries(grpc grpc++ grpc++_unsecure protobuf grpc++_reflection ${PROTOBUF_LIBRARY})
 
-add_executable(main main.cpp server.cpp server.h ${GENERATED_PROTOBUF_FILES})
+add_executable(main main.cpp server.cpp server.h ${GENERATED_PROTOBUF_FILES}
+        ../../logic/all_cards.h
+        ../../logic/all_cards.cpp
+        ../../logic/action.cpp
+        ../../logic/action.h
+        ../../logic/additional.cpp
+        ../../logic/additional.h
+        ../../logic/all_characters.cpp
+        ../../logic/all_characters.h
+        ../../logic/card.cpp
+        ../../logic/card.h
+        ../../logic/character.cpp
+        ../../logic/character.h
+        ../../logic/game_state.cpp
+        ../../logic/game_state.h
+        ../../logic/game.cpp
+        ../../logic/game.h
+        ../../logic/goods.cpp
+        ../../logic/goods.h
+        ../../logic/item.cpp
+        ../../logic/item.h
+        ../../logic/navigation.cpp
+        ../../logic/navigation.h
+        ../../logic/player.cpp
+        ../../logic/player.h
+        ../../logic/weapon.cpp
+        ../../logic/weapon.h
+        ../../logic/universal.cpp
+        ../../logic/universal.h)
 add_executable(client player_main.cpp player.h player.cpp ${GENERATED_PROTOBUF_FILES})
