--- a/src/ui/lifeboat/CMakeLists.txt
+++ b/src/ui/lifeboat/CMakeLists.txt
@@ -63,6 +63,6 @@ else()
           )
 endif()
 
-target_link_libraries(lifeboat_ui PRIVATE Qt5::Widgets)
+target_link_libraries(lifeboat_ui PRIVATE Qt5::Widgets PUBLIC logic)
 target_include_directories(lifeboat_ui PUBLIC ../../util)
 
